--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 
 body {
   font-family: var(--font-roboto);
-  background-color: #c2c5c7;
+  background-color: #ffffff;
 }
 
 .app {
@@ -46,7 +46,7 @@ body {
 
 h1 {
   font-family: sans-serif;
-  font-size: 24px;
+  font-size: 48px;
   font-weight: bold;
   text-align: center;
   color: #333;
