--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,18 @@
   margin: 0;
   border: 0;
   box-sizing: border-box;
+  color: white; /* Set default font color to white */
 }
 
+body {
+  font-family: var(--font-roboto);
+  margin: 0;
+  padding: 0;
+  /* Fallback for older browsers */
+  background-color: #030303; /* Fallback color if gradients are not supported */
+  /* Gradient code for modern browsers */
+  background-image: linear-gradient(to right, #16181c 0%, #17191d 100%);
+}
 :root {
   --font-roboto: "Roboto Slab", serif;
   --font-raleway: "Raleway", sans-serif;
@@ -16,6 +26,7 @@ body {
   font-family: var(--font-roboto);
   background-color: #ffffff;
 }
+
 
 .app {
   padding: 4rem;
@@ -106,4 +117,29 @@ h1 {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.homepage h3{
+  font-family: var(--font-raleway);
+  font-size: 72px;
+  font-weight: 700;
+  text-align: left;
+  margin-bottom: 20px;
+  color: #ffffff;
+  position: relative;
+  background: linear-gradient(to right, rgb(0, 221, 255), #475fff);
+  -webkit-background-clip: text;
+  background-clip: text;
+  text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.25);
+  color: transparent;
+}
+
+.homepage h3::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  width: 100%;
+  height: 3px;
+  background-color: #4e4e4e;
 }
