--- a/src/Login.css
+++ b/src/Login.css
@@ -1,9 +1,10 @@
+
 .container{
     display: flex;
     flex-direction: column;
     margin: auto;
     margin-top: 50px;
-    background: #fff;
+    background: #17191d;
     padding-bottom: 50px;
     width: 650px;
 }
