--- a/src/App.css
+++ b/src/App.css
@@ -143,3 +143,16 @@ h1 {
   height: 3px;
   background-color: #4e4e4e;
 }
+
+.user h2{
+  font-size: 46px;
+  text-align: left;
+  font-weight: 300;
+}
+
+.ProfilePage h1{
+  color: white;
+  font-weight: 300;
+  text-decoration: underline;
+  
+}
