--- a/src/Blog.css
+++ b/src/Blog.css
@@ -1,22 +1,22 @@
 /* Blog.css */
 
 .post {
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    padding: 16px;
-    margin-bottom: 20px;
-    margin-left: 25%;
-    margin-right: 25%;
-    background-color: #1a1a1b;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .post h1 {
-    font-size: 24px;
-    margin-bottom: 2px;
-    color: #ffffff;
-    text-align: left;
-  }
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 20px; /* Increased padding */
+  margin-bottom: 20px;
+  margin-left: 25%;
+  margin-right: 25%;
+  background-color: #222; /* Updated background color */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Added box shadow */
+}
+
+.post h1 {
+  font-size: 24px;
+  margin-bottom: 10px; /* Adjusted margin */
+  color: #fff; /* Changed text color */
+  text-align: left;
+}
   
   .post h2 {
     font-size: 16px;
