--- a/src/Login.css
+++ b/src/Login.css
@@ -40,47 +40,49 @@
     gap: 25px;
 }
 
-.input {
+.input{
     display: flex;
     align-items: center;
-    margin: 10px auto; /* Adjusted margin */
+    margin: auto;
     width: 480px;
-    height: 60px; /* Reduced height */
-    background: #f5f5f5; /* Lighter background color */
+    height: 80px;
+    background: #eaeaea;
     border-radius: 6px;
+
 }
 
-.input img {
-    margin: 0px 20px; /* Adjusted margin */
+.input img{
+    margin: 0px 30px;
 }
 
-.input input {
-    height: 40px; /* Reduced height */
-    width: 320px; /* Adjusted width */
+.input input{
+    height: 50px;
+    width: 400px;
     background: transparent;
     border: none;
     outline: none;
-    color: #333; /* Changed text color */
-    font-size: 16px; /* Reduced font size */
+    color: #797979;
+    font-size: 19px;
 }
 
-.submit-container {
+.submit-container{
     display: flex;
-    gap: 20px; /* Adjusted gap */
-    margin: 30px auto; /* Adjusted margin */
+    gap: 30px;
+    margin: 60px auto;
+
 }
 
-.submit {
+.submit{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 160px; /* Adjusted width */
-    height: 50px; /* Adjusted height */
+    width: 220px;
+    height: 60px;
     color: #fff;
-    background: #007bff;
-    border-radius: 25px; /* Rounded corners */
-    font-size: 16px; /* Reduced font size */
-    font-weight: 600; /* Updated font weight */
+    background: #2a6ac9;
+    border-radius: 50px;
+    font-size: 19px;
+    font-weight: 700px;
     cursor: pointer;
 }
 
