--- a/src/App.css
+++ b/src/App.css
@@ -156,3 +156,25 @@ h1 {
   text-decoration: underline;
   
 }
+
+.select {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #333; /* Change the background color */
+  padding: 20px; /* Add padding */
+}
+
+.select a {
+  text-decoration: none;
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 8px 12px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease; /* Add smooth transition */
+}
+
+.select a:hover {
+  background-color: #555; /* Change color on hover */
+}
