--- a/src/App.css
+++ b/src/App.css
@@ -102,7 +102,7 @@ h1 {
   background: transparent;
   border: none;
   outline: none;
-  color: #797979;
+  color: #1a1a1b;
   font-size: 19px;
   
 }
@@ -142,16 +142,29 @@ h1 {
   background-color: #4e4e4e;
 }
 
-.user h2{
+.user h2 {
   font-size: 46px;
-  text-align: left;
+  text-align: left; 
+  margin: 0 auto; 
+  max-width: 900px; 
   font-weight: 300;
+  margin-bottom: 10px;
 }
 
+
 .ProfilePage h1{
-  color: white;
-  font-weight: 300;
-  text-decoration: underline;
+  font-family: var(--font-raleway);
+  font-size: 72px;
+  font-weight: 700;
+  text-align: Center;
+  margin-bottom: 20px;
+  color: #ffffff;
+  position: relative;
+  background: linear-gradient(to right, rgb(0, 221, 255), #475fff);
+  -webkit-background-clip: text;
+  background-clip: text;
+  text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.25);
+  color: transparent;
   
 }
 
@@ -217,17 +230,25 @@ h1 {
 }
 
 .CreatePost {
-  max-width: 600px;
-  margin: 0 auto;
+  max-width: 60%;
+  margin: 5rem auto;
   padding: 20px;
   border: 1px solid #4e4e4e;
   border-radius: 8px;
   background-color: #1a1a1b;
 }
 
+@media screen and (max-width: 768px) {
+  .CreatePost {
+    max-width: 90%;
+  }
+}
+
+
 .CreatePost h1 {
-  font-size: 24px;
+  font-size: 48px;
   margin-bottom: 20px;
+  color: #5bb3ff;
 }
 
 .CreatePost label {
@@ -238,19 +259,19 @@ h1 {
 .CreatePost input[type="text"],
 .CreatePost textarea {
   width: 100%;
-  padding: 8px;
+  padding: 25px; 
   margin-bottom: 15px;
   border: 1px solid #4e4e4e;
   border-radius: 4px;
-  font-size: 16px;
+  font-size: 25px; 
   background-color: #eaeaea;
   color: #797979;
 }
-
 .CreatePost textarea {
-  height: 150px;
+  height: 200px; 
   resize: vertical;
 }
+
 
 .CreatePost button {
   padding: 10px 20px;
@@ -271,3 +292,33 @@ h1 {
 }
 
 
+.homepage-link {
+  text-decoration: none;
+}
+
+.homepage-link:hover {
+  text-decoration: none;
+}
+
+.post-link{
+  text-decoration: none;
+}
+
+.post-link:hover {
+  text-decoration: none;
+}
+
+
+
+.homepage-link {
+  text-decoration: none;
+}
+
+.login-link {
+  text-decoration: none;
+}
+
+.error-message{
+  text-align: center;
+  font-size: 24px;
+}
