--- a/src/Blog.css
+++ b/src/Blog.css
@@ -1,5 +1,3 @@
-/* Blog.css */
-
 .post {
     border: 1px solid #ccc;
     border-radius: 8px;
@@ -56,6 +54,7 @@ h3{
     margin-bottom: 20px;
     margin-left: 5%;
     margin-right: 5%;
+    margin-top: 2%;
     background-color: #1a1a1b;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
@@ -84,4 +83,10 @@ h3{
     font-size: 20px;
     line-height: 1.5;
     color: #ffffff;
+  }
+
+  .page img {
+    max-width: 70%;
+    height: auto; 
+
   }
