--- a/src/Login.css
+++ b/src/Login.css
@@ -20,7 +20,7 @@
 }
 
 .text{
-    color: #2a6ac9;
+    color: #5bb3ff;
     font-size: 38px;
     font-weight: 700;
 
@@ -29,7 +29,7 @@
 .underline{
     width: 61px;
     height: 6px;
-    background: #2a6ac9;
+    background: #5bb3ff;
     border-radius: 9px;
 }
 
@@ -79,7 +79,7 @@
     width: 220px;
     height: 60px;
     color: #fff;
-    background: #2a6ac9;
+    background: #5bb3ff;
     border-radius: 50px;
     font-size: 19px;
     font-weight: 700px;
